2005-07-25  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpdialog.c (gimp_dialog_add_buttons_valist):
	don't call gtk_widget_hide() on a NULL help button.

2005-07-24  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpbrushmenu.c
	* libgimp/gimppatternmenu.c: put the previews into sunken instead
	of etched-in frames.

2005-07-24  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppattern.c: untabify, minor cleanup.

2005-07-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpselectiondata.c
	(gimp_selection_data_get_buffer): special case the global buffer
	so it can be dropped, not only dragged around.

2005-07-23  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.c: added a label showing the
	number of selected pages. Allow to enter ranges like "5-" or "-7"
	(treat them as if the user had entered "5-n_pages" or "1-7").
	Minor UI spacing and code cleanup.

2005-07-22  Michael Schumacher  <schumaml@cvs.gnome.org>

	* libgimpwidgets/gimpwidgets.def: added missing
	gimp_page_selector_[get|set]_target 

2005-07-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_init):
	allow to drop palettes onto the palette view again.

2005-07-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_zoom):
	fixed the GIMP_ZOOM_TO case for palettes with a number of colors
	that is not a multiple of the number of columns.

2005-07-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): reverted my last change here
	and replaced it with a better fix.

2005-07-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c: setup the dnd stuff in
	GimpView::set_viewable() and remove GimpView's automatically added
	GimpPalette drag source. Fixes color dragging (bug #113237).

2005-07-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.[ch]: added gimp_preview_get_area()