@@ -75,7 +75,7 @@ void register_undo_procs               (Gimp *gimp);
 void register_unit_procs               (Gimp *gimp);
 void register_vectors_procs            (Gimp *gimp);
 
-/* 464 procedures registered total */
+/* 465 procedures registered total */
 
 void
 internal_procs_init (Gimp               *gimp,
@@ -105,76 +105,76 @@ internal_procs_init (Gimp               *gimp,
   (* status_callback) (NULL, _("Convert"), 0.17);
   register_convert_procs (gimp);
 
-  (* status_callback) (NULL, _("Display procedures"), 0.177);
+  (* status_callback) (NULL, _("Display procedures"), 0.176);
   register_display_procs (gimp);
 
   (* status_callback) (NULL, _("Drawable procedures"), 0.185);
   register_drawable_procs (gimp);
 
-  (* status_callback) (NULL, _("Transformation procedures"), 0.261);
+  (* status_callback) (NULL, _("Transformation procedures"), 0.26);
   register_drawable_transform_procs (gimp);
 
   (* status_callback) (NULL, _("Edit procedures"), 0.295);
   register_edit_procs (gimp);
 
-  (* status_callback) (NULL, _("File Operations"), 0.315);
+  (* status_callback) (NULL, _("File Operations"), 0.314);
   register_fileops_procs (gimp);
 
-  (* status_callback) (NULL, _("Floating selections"), 0.336);
+  (* status_callback) (NULL, _("Floating selections"), 0.335);
   register_floating_sel_procs (gimp);
 
-  (* status_callback) (NULL, _("Font UI"), 0.349);
+  (* status_callback) (NULL, _("Font UI"), 0.348);
   register_font_select_procs (gimp);
 
-  (* status_callback) (NULL, _("Fonts"), 0.356);
+  (* status_callback) (NULL, _("Fonts"), 0.355);
   register_fonts_procs (gimp);
 
-  (* status_callback) (NULL, _("Gimprc procedures"), 0.36);
+  (* status_callback) (NULL, _("Gimprc procedures"), 0.359);
   register_gimprc_procs (gimp);
 
-  (* status_callback) (NULL, _("Gradient"), 0.375);
+  (* status_callback) (NULL, _("Gradient"), 0.374);
   register_gradient_procs (gimp);
 
-  (* status_callback) (NULL, _("Gradient UI"), 0.44);
+  (* status_callback) (NULL, _("Gradient UI"), 0.439);
   register_gradient_select_procs (gimp);
 
-  (* status_callback) (NULL, _("Gradients"), 0.446);
+  (* status_callback) (NULL, _("Gradients"), 0.445);
   register_gradients_procs (gimp);
 
-  (* status_callback) (NULL, _("Guide procedures"), 0.457);
+  (* status_callback) (NULL, _("Guide procedures"), 0.456);
   register_guides_procs (gimp);
 
-  (* status_callback) (NULL, _("Help procedures"), 0.47);
+  (* status_callback) (NULL, _("Help procedures"), 0.469);
   register_help_procs (gimp);
 
-  (* status_callback) (NULL, _("Image"), 0.472);
+  (* status_callback) (NULL, _("Image"), 0.471);
   register_image_procs (gimp);
 
-  (* status_callback) (NULL, _("Layer"), 0.608);
+  (* status_callback) (NULL, _("Layer"), 0.606);
   register_layer_procs (gimp);
 
-  (* status_callback) (NULL, _("Message procedures"), 0.666);
+  (* status_callback) (NULL, _("Message procedures"), 0.665);
   register_message_procs (gimp);
 
-  (* status_callback) (NULL, _("Miscellaneous"), 0.672);
+  (* status_callback) (NULL, _("Miscellaneous"), 0.671);
   register_misc_procs (gimp);
 
   (* status_callback) (NULL, _("Paint Tool procedures"), 0.677);
   register_paint_tools_procs (gimp);
 
-  (* status_callback) (NULL, _("Palette"), 0.709);
+  (* status_callback) (NULL, _("Palette"), 0.71);
   register_palette_procs (gimp);
 
-  (* status_callback) (NULL, _("Palette UI"), 0.739);
+  (* status_callback) (NULL, _("Palette UI"), 0.74);
   register_palette_select_procs (gimp);
 
   (* status_callback) (NULL, _("Palettes"), 0.746);
   register_palettes_procs (gimp);
 
-  (* status_callback) (NULL, _("Parasite procedures"), 0.754);
+  (* status_callback) (NULL, _("Parasite procedures"), 0.755);
   register_parasite_procs (gimp);
 
-  (* status_callback) (NULL, _("Paths"), 0.78);
+  (* status_callback) (NULL, _("Paths"), 0.781);
   register_paths_procs (gimp);
 
   (* status_callback) (NULL, _("Pattern"), 0.815);
@@ -183,7 +183,7 @@ internal_procs_init (Gimp               *gimp,
   (* status_callback) (NULL, _("Pattern UI"), 0.819);
   register_pattern_select_procs (gimp);
 
-  (* status_callback) (NULL, _("Patterns"), 0.825);
+  (* status_callback) (NULL, _("Patterns"), 0.826);
   register_patterns_procs (gimp);
 
   (* status_callback) (NULL, _("Plug-in"), 0.834);
@@ -192,10 +192,10 @@ internal_procs_init (Gimp               *gimp,
   (* status_callback) (NULL, _("Procedural database"), 0.847);
   register_procedural_db_procs (gimp);
 
-  (* status_callback) (NULL, _("Progress"), 0.866);
+  (* status_callback) (NULL, _("Progress"), 0.867);
   register_progress_procs (gimp);
 
-  (* status_callback) (NULL, _("Image mask"), 0.881);
+  (* status_callback) (NULL, _("Image mask"), 0.882);
   register_selection_procs (gimp);
 
   (* status_callback) (NULL, _("Selection Tool procedures"), 0.918);
@@ -207,7 +207,7 @@ internal_procs_init (Gimp               *gimp,
   (* status_callback) (NULL, _("Transform Tool procedures"), 0.938);
   register_transform_tools_procs (gimp);
 
-  (* status_callback) (NULL, _("Undo"), 0.95);
+  (* status_callback) (NULL, _("Undo"), 0.951);
   register_undo_procs (gimp);
 
   (* status_callback) (NULL, _("Units"), 0.966);
